--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,14 @@
 
     <string name="home_header">Home</string>
     <string name="sign_up_header">Pick a Time!</string>
+    <string name="your_name">Your name...</string>
+
+    <!-- Actions -->
+    <string name="show_days">Show Days</string>
+
+    <!-- Dates -->
+    <string name="March24th">March 24th, 2015</string>
+    <string name="March25th">March 25th, 2015</string>
+    <string name="March26th">March 26th, 2015</string>
 
 </resources>
