--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,8 +4,8 @@
     <string name="app_name">Bike A Thon</string>
     <string name="action_settings">Settings</string>
 
-    <string name="home_header">Home</string>
-    <string name="sign_up_header">Register!</string>
+    <string name="home_header">Learn More</string>
+    <string name="sign_up_header">Register</string>
     <string name="your_name">Name...</string>
     <string name="your_org">Organization...</string>
 
